cbits/Bullet.h

 
void btBoxShape_calculateLocalInertia(void *c,float p0,float* p1); //method: calculateLocalInertia void ( ::btBoxShape::* )( ::btScalar,::btVector3 & ) const
int btBoxShape_getNumPlanes(void *c); //method: getNumPlanes int ( ::btBoxShape::* )(  ) const
void btBoxShape_localGetSupportingVertex(void *c,float* p0,float* ret); //method: localGetSupportingVertex ::btVector3 ( ::btBoxShape::* )( ::btVector3 const & ) const
//not supported method: batchedUnitVectorGetSupportingVertexWithoutMargin void ( ::btBoxShape::* )( ::btVector3 const *,::btVector3 *,int ) const
// error:  - unsupported,  - unsupported, int - ok, void - ok

void btBoxShape_setLocalScaling(void *c,float* p0); //method: setLocalScaling void ( ::btBoxShape::* )( ::btVector3 const & ) 
void btBoxShape_getPlaneEquation(void *c,float* p0,int p1); //method: getPlaneEquation void ( ::btBoxShape::* )( ::btVector4 &,int ) const
void btBoxShape_getPreferredPenetrationDirection(void *c,int p0,float* p1); //method: getPreferredPenetrationDirection void ( ::btBoxShape::* )( int,::btVector3 & ) const
int btBoxShape_getNumEdges(void *c); //method: getNumEdges int ( ::btBoxShape::* )(  ) const
char const * btBoxShape_getName(void *c); //method: getName char const * ( ::btBoxShape::* )(  ) const
void btBoxShape_getVertex(void *c,int p0,float* p1); //method: getVertex void ( ::btBoxShape::* )( int,::btVector3 & ) const
void btBoxShape_getEdge(void *c,int p0,float* p1,float* p2); //method: getEdge void ( ::btBoxShape::* )( int,::btVector3 &,::btVector3 & ) const
int btBoxShape_isInside(void *c,float* p0,float p1); //method: isInside bool ( ::btBoxShape::* )( ::btVector3 const &,::btScalar ) const
void btBoxShape_getPlane(void *c,float* p0,float* p1,int p2); //method: getPlane void ( ::btBoxShape::* )( ::btVector3 &,::btVector3 &,int ) const
void btBoxShape_getHalfExtentsWithoutMargin(void *c,float* ret); //method: getHalfExtentsWithoutMargin ::btVector3 const & ( ::btBoxShape::* )(  ) const
int btBoxShape_getNumPreferredPenetrationDirections(void *c); //method: getNumPreferredPenetrationDirections int ( ::btBoxShape::* )(  ) const
void btBoxShape_getAabb(void *c,float* p0,float* p1,float* p2); //method: getAabb void ( ::btBoxShape::* )( ::btTransform const &,::btVector3 &,::btVector3 & ) const
void btBoxShape_setMargin(void *c,float p0); //method: setMargin void ( ::btBoxShape::* )( ::btScalar ) 
int btBoxShape_getNumVertices(void *c); //method: getNumVertices int ( ::btBoxShape::* )(  ) const